[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38", "py39"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_tests = "tests"
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS"]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.poetry]
name = "teritorio"
version = "1.1.0"
description = "A library for country and currency ISO codes"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "https://github.com/spapanik/teritorio"

keywords = ["iso", "currency", "country"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
]

[tool.poetry.dependencies]
python = "^3.6.2"

dataclasses = { version = "^0.7.0", python = "~3.6" }

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.0"
mypy = "^0.910"

pytest = "^6.2.0"

types-dataclasses = "^0.6.0"

ipython = [
    {version = "^7.16.0", python = "~3.6.0"},
    {version = "^7.28.0", python = "^3.7.0"},
]
ipdb = "^0.13.0"

flake8 = "^4.0.0"
flake8-bugbear = "^21.9.0"
flake8-builtins = "^1.5.0"
flake8-comprehensions = "^3.7.0"
flake8-eradicate = "^1.2.0"
flake8-executable = "^2.1.0"
flake8-mutable = "^1.2.0"
flake8-tidy-imports = "^4.5.0"
