[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py37"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "E501",
    "TRY003",
]
src = ["src"]
target-version = "py37"

[tool.ruff.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]
"dev_scripts/**" = [
    "INP001",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.isort]
combine-as-imports = true
forced-separate = ["tests"]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.poetry]
name = "teritorio"
version = "2023.06.16"
description = "A library for country and currency ISO codes"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "README.rst"

homepage = "https://teritorio.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/teritorio"
documentation = "https://teritorio.readthedocs.io/en/stable/"

keywords = ["iso", "currency", "country"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
]

[tool.poetry.dependencies]
# python version
python = "^3.7"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12"
ipdb = {version = "^0.13", python = "^3.9"}
ipython = {version = "^8.12", python = "^3.9"}
lxml = "^4.9"
pipdeptree = "^2.7"

[tool.poetry.group.lint.dependencies]
black = "^23.3"
mypy = "^1.2"
ruff = "^0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3"
pytest-cov = "^4.0"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^6.2", python = "^3.10"}
sphinx-rtd-theme = {version = "^1.2", python = "^3.10"}
