[build-system]
requires = [
    "poetry_core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = [
    "py38",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py38"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]
"dev_scripts/**" = [
    "INP001",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.poetry]
name = "teritorio"
version = "2024.03.18"
description = "A library for country and currency ISO codes"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "docs/README.md"

homepage = "https://teritorio.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/teritorio"
documentation = "https://teritorio.readthedocs.io/en/stable/"

keywords = [
    "iso",
    "currency",
    "country",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
]

[tool.poetry.dependencies]
# python version
python = "^3.8"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = { version = "^4.12", python = "^3.10" }
ipdb = { version = "^0.13", python = "^3.10" }
ipython = { version = "^8.21", python = "^3.10" }
lxml = { version = "^5.1", python = "^3.10" }
pickleshare = { version = "^0.7", python = "^3.10" }
pipdeptree = "^2.13"

[tool.poetry.group.lint.dependencies]
black = "^24.1"
mypy = "^1.8"
ruff = "^0.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5"
mkdocs-material = "^9.5"
Pygments = "^2.17"
